Pre-update 1.3.6 - bugfixes - web-app relaunch in progress